# forager

./: .gitignore  main.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  tapcap.py
docs/: alpine.rst  conf.py  date.rst  index.rst  install.rst  maple.rst  palm.rst  rexactor.rst  support.rst  tapcap.rst
rexactor/: operators.py  rexactor.py
rexactor/grex/: alignment.py  needlemanwunsch.py
rexactor/trex/: operators.py  positions.py  tokens.py
src/: ensemble.py  forager.py
src/models/: forager.py
src/rexactor/: rexactor.py
src/rexactor/grex/: alignment.py
src/rexactor/trex/: tokens.py
